# Parallel-Programming

./: README.md
CUDA/: Gauss.txt
Lab1/lab1_linux/: lab1_arm  lab1_linux  lab1_linux.cbp  lab1_linux.depend  lab1_linux_o2  lab1_linux_o3  lab2_linux_o1  main.cpp
Lab1/lab1_win/: lab1_win.cbp  lab1_win.depend  main.cpp
Lab1/lab2_linux/: lab2_arm  lab2_linux  lab2_linux.cbp  lab2_linux.layout  lab2_linux_o1  lab2_linux_o2  lab2_linux_o3  main.cpp
Lab1/lab2_win/: lab2_win.cbp  lab2_win.depend  lab2_win.layout  main.cpp
Lab2/AVX/: AVX.cbp  AVX.layout
Lab2/Cache_Serial/: Cache_Serial.cbp  main.cpp
Lab2/Neon/: Neon.cbp  Neon.layout
Lab2/SSE/: SSE.depend  SSE.layout
Lab2/Special Neon/: EliminatedLine.txt  Special Neon.layout
Lab2/Special_Serial/: Special_Serial.cbp  Special_Serial.layout  main.cpp
Lab2/serial/: serial.cbp
MPI/Cycle_Div_Block/: Cycle_Div_Block.cbp  Cycle_Div_Block.layout  main.cpp
MPI/Cycle_Div_Col/: Cycle_Div_Col.cbp  main.cpp  (+1 more)
transformer/: CMakeLists.txt  main.cpp  refer.txt
transformer/Test/: CMakeLists.txt
transformer/Test/model/Function/: TestLossFunction.cpp
transformer/Test/model/nn/: TestTensor.cpp  TestVar.cpp
transformer/model/: CMakeLists.txt
transformer/model/include/: Config.h  Model.h
transformer/model/include/Function/LossFunction/: LossFunction.h  LossFunctionFactory.h  MeanSquaredError.h
transformer/model/include/Transformer/: Transformer.h
transformer/model/include/Transformer/Decoder/: Decoder.h  DecoderBlock.h
transformer/model/include/Transformer/Encoder/: Encoder.h  EncoderBlock.h
transformer/model/include/Transformer/SelfAttention/: MultiHeadAttention.h  SelfAttention.h
transformer/model/include/nn/: AddNorm.h  FeedForward.h  Linear.h  Network.h  Softmax.h
transformer/model/include/nn/ComputationalGraph/: README.md
transformer/model/include/nn/ComputationalGraph/Operator/: AddOperator.h  MulOperator.h  Operator.h  OperatorFactory.h  README.md  SubOperator.h
transformer/model/include/nn/ComputationalGraph/Var/: AutoDifferentialVar.h  GradientInterface.h  NonAutoDifferentialVar.h  Var.h  VarUtility.h
transformer/model/include/nn/Tensor/: Tensor.h
transformer/model/src/Transformer/: Transformer.cpp
transformer/model/src/Transformer/Decoder/: Decoder.cpp  DecoderBlock.cpp
transformer/model/src/Transformer/Encoder/: Encoder.cpp  EncoderBlock.cpp
transformer/model/src/Transformer/SelfAttention/: MultiHeadAttention.cpp  SelfAttention.cpp
transformer/model/src/nn/: AddNorm.cpp
transformer/model/src/nn/ComputationalGraph/Operator/: AddOperator.cpp  MulOperator.cpp  SubOperator.cpp
transformer/model/src/nn/ComputationalGraph/Var/: AutoDifferentialVar.cpp  NonAutoDifferentialVar.cpp  Var.cpp
transformer/model/src/nn/Tensor/: Tensor.cpp
(+33 files in other folders)
